--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: ruby
-rvm:
-- 2.2
-- jruby-19mode
-- rbx-2
+rbenv:
+- 2.5.3
+addons:
+  postgresql: 9.6
+before_install:
+  nvm install --lts
+script:
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
+- bundle exec rspec
 deploy:
   provider: heroku
   api_key:
