--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ deploy:
   app: arcane-scrubland-46989
   on:
     repo: Level-turing-team/level_front_end
-    branch: travis
+    branch: main
   skip_cleanup: 'true'
