--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_user_circle.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_user_circle.yml
@@ -59,25 +59,25 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Fri, 16 Apr 2021 23:51:29 GMT
+      - Sat, 17 Apr 2021 22:17:19 GMT
       Connection:
       - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"6bd2f6a8f41b25c1baaae5a5753d2ed2"
+      - W/"4c80578967fdb2ddaf27de095489a853"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - eefd10e2-8a37-406e-8248-ca4ff53edf11
+      - 851ccbeb-6c7f-4a3c-862a-18aae97b2e93
       X-Runtime:
-      - '0.024444'
+      - '0.039481'
       Transfer-Encoding:
       - chunked
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"17","type":"profile","attributes":{"zipcode":"80022","user_id":10000002,"profile_picture":"http://www.google.com"}},{"id":"18","type":"profile","attributes":{"zipcode":"80023","user_id":10000003,"profile_picture":"http://www.google.com"}},{"id":"19","type":"profile","attributes":{"zipcode":"80024","user_id":10000004,"profile_picture":"http://www.google.com"}},{"id":"20","type":"profile","attributes":{"zipcode":"80025","user_id":10000005,"profile_picture":"http://www.google.com"}}]}'
-  recorded_at: Fri, 16 Apr 2021 23:51:29 GMT
+      string: '{"data":[{"id":"17","type":"profile","attributes":{"zipcode":"80022","user_id":10000002,"profile_picture":"http://www.google.com","username":null}},{"id":"18","type":"profile","attributes":{"zipcode":"80023","user_id":10000003,"profile_picture":"http://www.google.com","username":null}},{"id":"19","type":"profile","attributes":{"zipcode":"80024","user_id":10000004,"profile_picture":"http://www.google.com","username":null}},{"id":"20","type":"profile","attributes":{"zipcode":"80025","user_id":10000005,"profile_picture":"http://www.google.com","username":null}}]}'
+  recorded_at: Sat, 17 Apr 2021 22:17:20 GMT
 recorded_with: VCR 6.0.0
