--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+.env
+
+# Ignore application configuration
+/config/application.yml
+/coverage
